# BasicCLI

./: CMakeLists.txt
src/: config.h  main.cpp
src/commands/: Batch.cpp  Batch.h  Date.cpp  Date.h  Echo.cpp  Echo.h  Head.cpp  Head.h  Prompt.cpp  Prompt.h  Remove.cpp  Remove.h  Time.cpp  Time.h  Touch.cpp  Touch.h  Translate.cpp  Translate.h  Truncate.cpp  Truncate.h  WordCount.cpp  WordCount.h
src/core/: CLI.cpp  CLI.h  Registry.cpp  Registry.h
src/interfaces/: BaseCommand.h  BinaryCommand.h  Command.h  StreamCommand.h
src/utils/: Exception.h  Logger.cpp  Logger.h  Parser.cpp  Parser.h  Reader.cpp  Reader.h
